# Starter

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
sql/: sample_query.sql
src/gis_starter/: __init__.py  db.py  gdal_utils.py  main.py
tests/: test_db.py
