[project]
name = "gis-starter"
version = "0.1.0"
description = "Small starter repo for Python GIS + DuckDB Spatial workflows"
requires-python = ">=3.12"

dependencies = []

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
